--- a/countriesinfo/pubspec.yaml
+++ b/countriesinfo/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+2
   cupertino_icons: ^0.1.2
+  flutter_svg: ^0.14.0
+  gradient_app_bar: ^0.0.1
 
 dev_dependencies:
   flutter_test:
