--- a/countriesinfo/pubspec.yaml
+++ b/countriesinfo/pubspec.yaml
@@ -24,6 +24,12 @@ dependencies:
   flutter_svg: ^0.14.0
   gradient_app_bar: ^0.0.1
 
+  gradient_widgets: ^0.5.0
+  animated_text_kit: ^1.3.1
+
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +69,8 @@ flutter:
         - asset: assets/fonts/montserrat/Montserrat-Regular.ttf
         - asset: assets/fonts/montserrat/Montserrat-Medium.ttf
           weight: 400
-        - asset: assets/fonts/montserrat/Montserrat-Italic.ttf
-          style: italic
+#        - asset: assets/fonts/montserrat/Montserrat-Italic.ttf
+#          style: italic
         - asset: assets/fonts/montserrat/Montserrat-Light.ttf
           weight: 200
         - asset: assets/fonts/montserrat/Montserrat-SemiBold.ttf
