--- a/countriesinfo/pubspec.yaml
+++ b/countriesinfo/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   auto_size_text: ^2.1.0
   gradient_widgets: ^0.5.0
   animated_text_kit: ^1.3.1
+  webview_flutter: ^0.3.13
+  flutter_spinkit: ^4.0.0
 
 
 
@@ -48,8 +50,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+   - assets/images/logoc.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
