--- a/countriesinfo/pubspec.yaml
+++ b/countriesinfo/pubspec.yaml
@@ -21,13 +21,15 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+2
   cupertino_icons: ^0.1.2
-  flutter_svg: ^0.14.0
+  flutter_svg: ^0.14.1
   gradient_app_bar: ^0.0.1
   auto_size_text: ^2.1.0
   gradient_widgets: ^0.5.0
   animated_text_kit: ^1.3.1
   webview_flutter: ^0.3.13
   flutter_spinkit: ^4.0.0
+  connectivity: ^0.4.4
+  rflutter_alert: ^1.0.3
 
 
 
